kubernetes/echoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: echoserver
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: echoserver
