kubernetes/echoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
spec:
  ingressClassName: nginx-internal
  rules:
  - host: echoserver.devx-columbus.k8s.dev.ativalabs.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echoserver
            port:
              number: 80
